--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,11 @@
 
     <title>Seleccionar medio de pago | undefined school</title>
 
-    <link rel="icon" type="image/png" href="/favicon.png" />
-    <link rel="stylesheet" href="/build/bundle.css" />
+    <link rel="icon" type="image/png" href="./favicon.ico" />
+    <link rel="stylesheet" href="./build/bundle.css" />
     <link rel="stylesheet" href="./styles.css" />
 
-    <script defer src="/build/bundle.js"></script>
+    <script defer src="./build/bundle.js"></script>
   </head>
 
   <body class="bg-black-us"></body>
