--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -13,5 +13,5 @@
     <script defer src="./build/bundle.js"></script>
   </head>
 
-  <body class="bg-black-us"></body>
+  <body></body>
 </html>
