--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 
     <title>Seleccionar medio de pago | undefined school</title>
 
-    <link rel="icon" type="image/png" href="./favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="./favicon.ico" />
     <link rel="stylesheet" href="./build/bundle.css" />
     <link rel="stylesheet" href="./styles.css" />
 
