--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,7 @@
     <link rel="icon" type="image/x-icon" href="./favicon.ico" />
     <link rel="stylesheet" href="./build/bundle.css" />
     <link rel="stylesheet" href="./styles.css" />
-    <link href="https://fonts.googleapis.com/css?family=Raleway:400,600&display=swap" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Raleway:400,600|Montserrat:500&display=swap" rel="stylesheet" />
 
     <script defer src="./build/bundle.js"></script>
   </head>
